# TaxonomyCleaner

./: .gitignore  CLAUDE.md  verify_alias_atomicity.py
CanonicalData/: README.md  main.py
JDAnalyser/: .gitignore  =3.7.0  CLAUDE.md  Codex.md  GEMINI.md  README.md  main.py  pyproject.toml  verb_analysis_plan.txt
JDAnalyser/agents/: __init__.py  group_assigner.py  review_classifier.py  sbert_dedup.py  semantic_dedup.py
JDAnalyser/config/: __init__.py  settings.yaml
JDAnalyser/discovery/: auditor.py  dedup.py  processor.py  promoter.py  taxonomy.py  verb_reader.py
JDAnalyser/discovery/VerbAnalysis/: processor.py
JDAnalyser/discovery/canonical/: auditor.py  dedup.py  processor.py  promoter.py
JDAnalyser/discovery/common/: pipeline_common.py
JDAnalyser/discovery/soft_skills/: processor.py  reader.py
JDAnalyser/input/Builtin/: builtin_structured_jobs_2026-03-06_155228.jsonl  builtin_structured_jobs_2026-03-06_160146.jsonl  builtin_structured_jobs_2026-03-06_180533.jsonl  builtin_structured_jobs_2026-03-06_221908.jsonl  builtin_structured_jobs_2026-03-07_022431.jsonl  builtin_structured_jobs_2026-03-07_172121.jsonl
JDAnalyser/input/Taxonomy/: canonical_data.json  soft_skill_taxonomy.json
JDAnalyser/tests/: test_discovery.py
JDAnalyser/tests/discovery/VerbAnalysis/: test_spacy_extraction.py
PipelineAPI/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
PipelineAPI/app/: main.py
PipelineAPI/app/api/: dependencies.py
PipelineAPI/app/api/v1/: api.py
PipelineAPI/app/core/: config.py  logging.py
PipelineAPI/tests/: test_health.py
(+177 files in other folders)
